--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,8 +16,8 @@
 		"module": "ESNext",
 		"skipLibCheck": true,
 		/* Bundler mode */
-		"moduleResolution": "node",
-		// "allowImportingTsExtensions": true,
+		"moduleResolution": "bundler",
+		"allowImportingTsExtensions": true,
 		"resolveJsonModule": true,
 		"isolatedModules": true,
 		"noEmit": true,
